# korean-gongbu

./: .gitignore  README.md  docker-compose.yml  sonic.cfg
backend/: .gitignore  Cargo.toml  Gemfile  justfile
backend/app/controllers/: application_controller.rb
backend/app/controllers/api/v1/: authentication_controller.rb  grammar_controller.rb
backend/app/controllers/api/v1/users/: registrations_controller.rb  sessions_controller.rb
backend/app/controllers/concerns/: json_web_token.rb
backend/app/models/: grammar.rb  user.rb
backend/app/serializers/: grammar_serializer.rb
backend/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
backend/config/initializers/: cors.rb  devise.rb
backend/db/: schema.rb
backend/db/migrate/: 20220617023323_create_grammars.rb  20220618050556_create_users.rb
backend/lib/core_modules/: json_web_token.rb
backend/test/controllers/: grammar_controller_test.rb
backend/test/fixtures/: grammars.yml
frontend/: Dockerfile  justfile  package-lock.json  package.json
frontend/root/default/: Caddyfile
frontend/root/etc/services.d/frontend/: run
frontend/src/: App.vue
frontend/src/models/: grammar.ts
frontend/src/models/requests/: LoginRequest.ts
frontend/src/router/: index.ts
frontend/src/routes/: about.svelte
frontend/src/stores/: auth.ts
frontend/src/views/: AboutView.vue  GrammarEdit.vue  GrammarQuery.vue  GrammarShow.vue  HomeView.vue  LoginView.vue
scripts/: ingest-krgrammar.rb
